# minecraft-mod-like-im-five

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Dockerfile.build-exe  Dockerfile.check  README.md  package-lock.json  package.json  release-please-config.json  renovate.json
.github/workflows/: build.yml  data-release.yml  rebuild.yml  release.yml  renovate.yml
data/: frameworks.yaml  profiles.yaml
scripts/: build-exe.ps1  gen-icons.ps1
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
