[package]
name = "minecraft-mod-like-im-five"
version = "0.4.0"
edition = "2021"
rust-version = "1.85"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
sha1 = "0.10"
hex = "0.4"
dirs = "5"
sysinfo = "0.32"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
