[package]
name = "minecraft-mod-like-im-five"
version = "1.3.0"
edition = "2021"
rust-version = "1.85"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
sha1 = "0.10"
hex = "0.4"
dirs = "5"
sysinfo = "0.32"
zip = { version = "2", default-features = false, features = ["deflate"] }

# Not used directly. Pinned to dodge a coherence regression introduced in
# `time` 0.3.48 (a new `From<HourBase>` impl conflicts with the blanket
# `From<T: Into<Option<OffsetDateTime>>>` in `cookie` and the `From<T: Into<Number>>`
# in `tauri-utils`). 0.3.36 is the last release before the regression.
# Drop this once cookie/tauri-utils ship a fix or the time crate reverts.
time = "=0.3.36"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
